@@ -17,6 +17,8 @@ ver. 0.7.5 (2006/??/??) - ???
 - Added option "ignoreregex" in filter scripts and jail.conf.
   Feature Request #1283304
 - Fixed a bug in user defined time regex/pattern
+- Improved documentation
+- Moved version.py and protocol.py to common/
 
 ver. 0.7.4 (2006/11/01) - beta
 ----------
